# ChangeLog for sys-apps/shadow
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.129 2006/03/09 20:26:31 gustavoz Exp $

  09 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  shadow-4.0.14-r1.ebuild:
  Stable on sparc wrt #125419

  09 Mar 2006; Luis Medinas <metalgod@gentoo.org> shadow-4.0.14-r1.ebuild:
  Stable on amd64. Bug #125419.

  08 Mar 2006; Markus Rothe <corsair@gentoo.org> shadow-4.0.14-r1.ebuild:
  Stable on ppc64; bug #125419

  10 Jan 2006; Chris PeBenito <pebenito@gentoo.org> shadow-4.0.13.ebuild,
  shadow-4.0.14-r1.ebuild:
  Fix libselinux version required.

*shadow-4.0.14-r1 (10 Jan 2006)

  10 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +files/shadow-4.0.14-su-cvs.patch, -shadow-4.0.14.ebuild,
  +shadow-4.0.14-r1.ebuild:
  Grab a fix from upstream cvs to fix `su -c boo` syntax #118342 by Wolfgang
  Frisch.

*shadow-4.0.14 (04 Jan 2006)

  04 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +files/shadow-4.0.14-nls-manpages.patch,
  +files/shadow-4.0.14-su-fix-environment.patch, +shadow-4.0.14.ebuild:
  Version bump.

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> shadow-4.0.13.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now.

*shadow-4.0.13 (10 Oct 2005)

  10 Oct 2005; Mike Frysinger <vapier@gentoo.org>
  +files/shadow-4.0.13-dots-in-usernames.patch,
  +files/shadow-4.0.13-login.defs.patch,
  +files/shadow-4.0.13-long-groupnames.patch,
  +files/shadow-4.0.13-nonis.patch,
  +files/shadow-4.0.13-su-fix-environment.patch, +shadow-4.0.13.ebuild:
  Version bump.

  24 Aug 2005; Martin Schlemmer <azarah@gentoo.org>
  +files/shadow-4.0.12-gcc2.patch, shadow-4.0.12.ebuild:
  Fix compiling with gcc-2.95.x

*shadow-4.0.12 (23 Aug 2005)

  23 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  +files/shadow-4.0.12-dots-in-usernames.patch,
  +files/shadow-4.0.12-long-groupnames.patch, +shadow-4.0.12.ebuild:
  Version bump.
