@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/shadow
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.129 2006/03/09 20:26:31 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.130 2006/03/11 07:44:02 vapier Exp $
+
+  11 Mar 2006; Mike Frysinger <vapier@gentoo.org> shadow-4.0.11.1-r1.ebuild,
+  shadow-4.0.11.1-r2.ebuild, shadow-4.0.12.ebuild, shadow-4.0.13.ebuild,
+  shadow-4.0.14-r1.ebuild:
+  The skey configure option is just plain skey now, not libskey, as noted by
+  Torsten Veller #125419.
 
   09 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   shadow-4.0.14-r1.ebuild:
